added color detection

--- a/task_1a.ipynb
+++ b/task_1a.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 407,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -12,15 +12,136 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 408,
    "metadata": {},
    "outputs": [],
    "source": [
     "# reading image and converting it to grayscale\n",
-    "img = cv2.imread('test_images/test_image_1.png', cv2.IMREAD_GRAYSCALE)\n",
+    "img = cv2.imread('test_images/test_image_15.png', cv2.IMREAD_GRAYSCALE)\n",
     "  \n",
     "# # converting image into grayscale image\n",
-    "# gray = cv2.cvtColor(img, cv2.COLOR_BGR2GRAY)"
+    "# gray = cv2.cvtColor(img, cv2.COLOR_BGR2GRAY)\n",
+    "\n",
+    "# for color detection\n",
+    "\n",
+    "image = cv2.imread('test_images/test_image_15.png')                \n",
+    "# Convert BGR to HSV\n",
+    "hsv_frame = cv2.cvtColor(image, cv2.COLOR_BGR2HSV)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Color detection:\n",
+    "\n",
+    "The lower and upper bounds are the boundaries of the color.\n",
+    "\n",
+    "low_[color]: denotes the lower threshold of the color, first argument is a np array containing RGB values, second argument denotes the datatype (unsigned int 8 bytes)\n",
+    "high_[color]: denotes the higher threshold of the color\n",
+    "\n",
+    "\n",
+    "**cv2.inRange()**\n",
+    "\n",
+    "inRange() function returns a binary mask of the frame where the color is present.\n",
+    "\n",
+    "*resultarray = inRange(sourcearray, upperboundarray, lowerboundarray)*\n",
+    "\n",
+    "sourcearray is the array whose elements are to be compared with the arrays representing upper bounds and lower bounds.\n",
+    "\n",
+    "upperboundarray is the array consisting of elements representing upper bounds.\n",
+    "\n",
+    "lowerboundarray is the array consisting of elements representing lower bounds.\n",
+    "\n",
+    "resultarray is the array representing the elements equal to either 255 or 0 returned from inRange() function.\n",
+    "\n",
+    "\n",
+    "**cv2.dilate()**\n",
+    "\n",
+    "Morphological Transform: Dilation, to remove noises from the images.\n",
+    "\n",
+    "**cv2.bitwise_and(source1, source2, destination, mask)**\n",
+    "\n",
+    "bitwise_and between the image frame and mask is performed to specifically detect that particular color and discard others.\n",
+    "\n",
+    "source1: First Input Image array(Single-channel, 8-bit or floating-point) \n",
+    "source2: Second Input Image array(Single-channel, 8-bit or floating-point) \n",
+    "dest: Output array (Similar to the dimensions and type of Input image array) \n",
+    "mask: Operation mask, Input / output 8-bit single-channel mask "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 409,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# define color ranges\n",
+    "\n",
+    "# red color range\n",
+    "low_red = np.array([0, 150, 50], np.uint8)\n",
+    "high_red = np.array([10, 255, 255], np.uint8)\n",
+    "red_mask = cv2.inRange(hsv_frame, low_red, high_red)\n",
+    "# red = cv2.bitwise_and(image, image, mask= red_mask)\n",
+    "\n",
+    "# blue color range\n",
+    "low_blue = np.array([94, 80, 2], np.uint8)\n",
+    "high_blue = np.array([126, 255, 255], np.uint8)\n",
+    "blue_mask = cv2.inRange(hsv_frame, low_blue, high_blue)\n",
+    "# blue = cv2.bitwise_and(image, image, mask= blue_mask)\n",
+    "\n",
+    "# green color range\n",
+    "low_green = np.array([36, 25, 25], np.uint8)\n",
+    "high_green = np.array([70, 255, 255], np.uint8)\n",
+    "green_mask = cv2.inRange(hsv_frame, low_green, high_green)\n",
+    "# green = cv2.bitwise_and(image, image, mask= green_mask)\n",
+    "\n",
+    "# orange color range\n",
+    "low_orange = np.array([15, 150, 50], np.uint8)\n",
+    "high_orange = np.array([25, 255, 255], np.uint8)\n",
+    "orange_mask = cv2.inRange(hsv_frame, low_orange, high_orange)\n",
+    "# orange = cv2.bitwise_and(image, image, mask= orange_mask)\n",
+    "\n",
+    "# mask = red_mask + blue_mask + green_mask + orange_mask\n",
+    "\n",
+    "# color_mask = cv2.bitwise_and(image, image, mask= mask)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 411,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# # cv2.imshow(\"Color Detected\", np.hstack((image, color_mask)))\n",
+    "# cv2.imshow(\"Multiple colors\", image)\n",
+    "# cv2.waitKey(0)\n",
+    "# cv2.destroyAllWindows()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 410,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "kernal = np.ones((6, 6), \"uint8\")\n",
+    "      \n",
+    "# For red color\n",
+    "red_mask = cv2.dilate(red_mask, kernal)\n",
+    "res_red = cv2.bitwise_and(image, image, mask = red_mask)\n",
+    "      \n",
+    "# For green color\n",
+    "green_mask = cv2.dilate(green_mask, kernal)\n",
+    "res_green = cv2.bitwise_and(image, image, mask = green_mask)\n",
+    "      \n",
+    "# For blue color\n",
+    "blue_mask = cv2.dilate(blue_mask, kernal)\n",
+    "res_blue = cv2.bitwise_and(image, image, mask = blue_mask)\n",
+    "\n",
+    "# For orange color\n",
+    "orange_mask = cv2.dilate(orange_mask, kernal)\n",
+    "res_orange = cv2.bitwise_and(image, image, mask = orange_mask)"
    ]
   },
   {
@@ -65,7 +186,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 412,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -87,11 +208,30 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 413,
    "metadata": {},
    "outputs": [],
    "source": [
     "contours,_ = cv2.findContours(threshold, cv2.RETR_TREE, cv2.CHAIN_APPROX_SIMPLE)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 414,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Creating contour to track red color\n",
+    "red_contours, _ = cv2.findContours(red_mask, cv2.RETR_TREE, cv2.CHAIN_APPROX_SIMPLE)\n",
+    "\n",
+    "# Creating contour to track green color\n",
+    "green_contours, _ = cv2.findContours(green_mask, cv2.RETR_TREE, cv2.CHAIN_APPROX_SIMPLE)\n",
+    "  \n",
+    "# Creating contour to track blue color\n",
+    "blue_contours, _ = cv2.findContours(blue_mask, cv2.RETR_TREE, cv2.CHAIN_APPROX_SIMPLE)\n",
+    "        \n",
+    "# Creating contour to track orange color\n",
+    "orange_contours, _ = cv2.findContours(orange_mask, cv2.RETR_TREE, cv2.CHAIN_APPROX_SIMPLE)"
    ]
   },
   {
@@ -108,6 +248,7 @@
     "\n",
     "This may have errorenous contours near the vertices, so we use approximation.\n",
     "**cv2.approxPolyDP(input_curve, epsilon, closed)**\n",
+    "\n",
     "It approximates a contour shape to another shape with less number of vertices depending upon the precision we specify.\n",
     "Second argument is called epsilon, which is maximum distance from contour to approximated contour. It is an accuracy parameter. A wise selection of epsilon is needed to get the correct output. The third argument is True, which indicates that the shape is closed.\n",
     "\n",
@@ -117,15 +258,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 415,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "588 370\n",
-      "325 145\n"
+      "82 509\n",
+      "601 506\n",
+      "317 320\n",
+      "602 234\n",
+      "201 218\n",
+      "292 161\n",
+      "395 165\n",
+      "203 98\n",
+      "793 96\n"
      ]
     }
    ],
@@ -144,9 +292,10 @@
     "    #cv2.drawContours(img, [contour], 0, (0, 0, 255), 5)\n",
     "    \n",
     "    #approximating\n",
-    "    approx = cv2.approxPolyDP(cnt, 0.01*cv2.arcLength(cnt, True), True)\n",
+    "    approx = cv2.approxPolyDP(cnt, 0.025*cv2.arcLength(cnt, True), True)\n",
     "    \n",
-    "    cv2.drawContours(img, [approx], 0, (0), 3)\n",
+    "    #img changed to image\n",
+    "    cv2.drawContours(image, [approx], 0, (0), 3)\n",
     "    \n",
     "    # printing the values in approx\n",
     "    # print(len(approx))\n",
@@ -158,7 +307,8 @@
     "    \n",
     "    # putting shape name at top of each shape\n",
     "    if len(approx) == 3:\n",
-    "        cv2.putText(img, 'Triangle', (x, y), font, 0.5, (0, 0, 0))\n",
+    "        #img changed to image\n",
+    "        cv2.putText(image, 'Triangle', (x, y), font, 1.0, (0, 0, 0))\n",
     "  \n",
     "    elif len(approx) == 4:\n",
     "        \n",
@@ -167,15 +317,18 @@
     "\n",
     "        aspectRatio = float (w)/h\n",
     "        if aspectRatio >= 0.95 and aspectRatio <= 1.05:\n",
-    "            cv2.putText(img, 'Square', (x, y), font, 0.5, (0, 0, 0))\n",
+    "            #img changed to image\n",
+    "            cv2.putText(image, 'Square', (x, y), font, 1.0, (0, 0, 0))\n",
     "        else:\n",
-    "            cv2.putText(img, 'Rectangle', (x, y), font, 0.5, (0, 0, 0))\n",
+    "            cv2.putText(image, 'Rectangle', (x, y), font, 1.0, (0, 0, 0))\n",
     "    \n",
     "    elif len(approx) == 5:\n",
-    "        cv2.putText(img, 'Pentagon', (x, y), font, 0.5, (0, 0, 0))\n",
+    "        #img changed to image\n",
+    "        cv2.putText(image, 'Pentagon', (x, y), font, 1.0, (0, 0, 0))\n",
     "  \n",
     "    else:\n",
-    "        cv2.putText(img, 'Circle', (x, y), font, 0.5, (0, 0, 0))\n",
+    "        #img changed to image\n",
+    "        cv2.putText(image, 'Circle', (x, y), font, 1.0, (0, 0, 0))\n",
     "        \n",
     "    # finding center point of shape\n",
     "    M = cv2.moments(cnt)\n",
@@ -183,6 +336,45 @@
     "        cx = int(M['m10']/M['m00'])\n",
     "        cy = int(M['m01']/M['m00'])\n",
     "    print(cx,cy)\n",
+    "    \n",
+    "    image = cv2.circle(image, (cx,cy), radius=2, color=(0, 0, 0), thickness=-1)\n",
+    "    \n",
+    "    #COLOR\n",
+    "    #RED\n",
+    "    for pic, contour in enumerate(red_contours):\n",
+    "        area = cv2.contourArea(contour)\n",
+    "        if(area > 300):\n",
+    "            x, y, w, h = cv2.boundingRect(contour)\n",
+    "#         image = cv2.rectangle(image, (x, y), (x + w, y + h), (0, 0, 0), 2)\n",
+    "              \n",
+    "        cv2.putText(image, \"Red\", (x-50, y+h+8), cv2.FONT_HERSHEY_SIMPLEX, 1.0, (0, 0, 0))   \n",
+    "    \n",
+    "    #GREEN\n",
+    "    for pic, contour in enumerate(green_contours):\n",
+    "        area = cv2.contourArea(contour)\n",
+    "        if(area > 300):\n",
+    "            x, y, w, h = cv2.boundingRect(contour)\n",
+    "#         image = cv2.rectangle(image, (x, y),  (x + w, y + h), (0, 0, 0), 2)\n",
+    "              \n",
+    "        cv2.putText(image, \"Green\", (x-50, y+h+8), cv2.FONT_HERSHEY_SIMPLEX,  1.0, (0, 0, 0))\n",
+    "        \n",
+    "    #BLUE\n",
+    "    for pic, contour in enumerate(blue_contours):\n",
+    "        area = cv2.contourArea(contour)\n",
+    "        if(area > 300):\n",
+    "            x, y, w, h = cv2.boundingRect(contour)\n",
+    "#         image = cv2.rectangle(image, (x, y), (x + w, y + h), (0, 0, 0), 2)\n",
+    "              \n",
+    "        cv2.putText(image, \"Blue\", (x-50, y+h+8), cv2.FONT_HERSHEY_SIMPLEX, 1.0, (0, 0, 0))\n",
+    "        \n",
+    "    #ORANGE\n",
+    "    for pic, contour in enumerate(orange_contours):\n",
+    "        area = cv2.contourArea(contour)\n",
+    "        if(area > 300):\n",
+    "            x, y, w, h = cv2.boundingRect(contour)\n",
+    "#         image = cv2.rectangle(image, (x, y),  (x + w, y + h), (0, 0, 0), 2)\n",
+    "              \n",
+    "        cv2.putText(image, \"Orange\", (x-50, y+h+8), cv2.FONT_HERSHEY_SIMPLEX,  1.0, (0, 0, 0))\n",
     "  "
    ]
   },
@@ -227,7 +419,6 @@
    ]
   },
   {
-   "attachments": {},
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -240,12 +431,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 416,
    "metadata": {},
    "outputs": [],
    "source": [
-    "cv2.imshow(\"shapes\", img)\n",
-    "cv2.imshow(\"Thresholded\", threshold)\n",
+    "# cv2.imshow(\"shapes\", image)\n",
+    "# cv2.imshow(\"Thresholded\", img)\n",
+    "# cv2.waitKey(0)\n",
+    "# cv2.destroyAllWindows()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 417,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# cv2.imshow(\"Multiple colors\", image)\n",
+    "# cv2.imshow(\"Shapes\", img)\n",
+    "cv2.imshow(\"Colors+Shapes\",image)\n",
     "cv2.waitKey(0)\n",
     "cv2.destroyAllWindows()"
    ]
